--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,38 +1,54 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <title>Title</title>
-    <link rel="stylesheet" href="bootstrap.min.css"/>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+    <!--  <link rel="stylesheet" href="../static/bootstrap.min.css" />-->
 </head>
+
 <body>
-<header>
-    <div class="container-fluid">
-        <nav class="navbar navbar-dark bg-primary">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{index}">Search <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{addProduct}">New Product </span></a>
-                </li>
+    <header>
+        <div class="container mb-4">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">Inventory Manager</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link active" href="#">Add a Product <span
+                                class="sr-only">(current)</span></a>
+                        <span class="nav-item nav-link"  th:inline="text">[[${#httpServletRequest.remoteUser}]]</span>
+                        <a class="nav-item nav-link" th:href="@{/logout}" th:inline="text">Logout</a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <section layout:fragment="content">
 
-            </ul>
-        </nav>
-    </div>
-</header>
-<section layout:fragment="content">
+    </section>
+    <footer class="navbar-fixed-bottom">
 
-</section>
-<footer class="navbar-fixed-bottom">
-    <hr>
-    <div class="container">
-        <small>dalytekam &copy 2019 </small>
-    </div>
-</footer>
+        <div class="container">
+            <small>dalytekam &copy 2019 </small>
+        </div>
+    </footer>
 
 </body>
+
 </html>
