--- a/src/main/resources/templates/editAProductForm.html
+++ b/src/main/resources/templates/editAProductForm.html
@@ -23,7 +23,7 @@
 <header>
     <div class="container mb-4">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" th:href="@{index}">Inventory Manager</a>
+            <a class="navbar-brand h2" th:href="@{index}">Inventory Manager</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,8 @@
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" th:href="@{addProduct}">Add a Product <span
                             class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#">User</a>
+                    <span class="text-success nav-item nav-link"  th:inline="text">[[${#httpServletRequest.remoteUser}]]</span>
+                    <a th:if="${#httpServletRequest.remoteUser}" class="nav-item nav-link text-danger" th:href="@{/logout}" th:inline="text">Logout</a>
 
                 </div>
             </div>
